# django-project-boilerplate

./: .editorconfig  .gitignore  local.yml  manage.py  pyproject.toml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
project_app/: conftest.py
project_app/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
project_app/users/: admin.py  apps.py  models.py
project_app/users/api/: serializers.py  views.py
project_app/users/tests/: test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
