[tool.poetry]
name = "project_backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
sentry-sdk = "^1.5.1"
psycopg2-binary = "^2.9.3"
django-environ = "^0.8.1"
django-model-utils = "^4.2.0"
django-anymail = {extras = ["sendinblue"], version = "^8.4"}
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
django-extensions = "^3.1.5"
pylint-django = "^2.4.4"
django-debug-toolbar = "^3.2.4"
Werkzeug = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
